Add Spark to vtl-sdmx for tests